fixed layout issue

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -54,12 +54,14 @@ body {
   margin: 0;
   font-family: 'Inter', sans-serif;
   background-color: #0f172a;
+  padding: 0;
+  width: 100%;
   /* dark theme */
   color: white;
 }
 
 #root {
-  width: 1126px;
+  width: 100%;
   max-width: 100%;
   margin: 0 auto;
   text-align: center;
